# CharLOTTE2.0

./: .env.example  .gitignore  ABORTED_CHANGES.md  CLAUDE.md  NLD_EFFICIENCY_NOTES.md  NLD_ONE_TO_ONE_MATCHING.md  NMT_TOKENIZER_NOTES.md  OC_PARALLEL_TRAINING.md  OC_TRAIN_ERRORS_3_5.md  PLAN.md  PLAN_nmt_config_alignment.md  PLAN_validation_stratified.md  README.md  SESSION_LOG.md  en.sh  en.yaml  main.py  pyproject.toml  setup.sh
code/OC/src/: CharTokenizer.py  CognateDataset.py  OC.py  OCLightning.py  OC_bahdanau.py  confirm_config_keys.py  train.py
code/configs/: test.yaml
data/IWSLT22_23_aeb/: extract.py
sbatch/: test.sh
src/NMT/train/: BARTLightning.py  NMTTokenizer.py  ParallelDatasets.py  child_eq_simple_config.py  train.py  train_jobs.py  train_tokenizer.py
src/OC/data/: code_170k_mauritian_creole.py  morisien_mt.py
src/OC/extract_cognates/: CandidatesFromParallel.py  CandidatesFromSyntheticParallel.py  Cognates.py  CognatesFromBLI.py  (+17 more)
src/configs/: multi.test.yaml  test.es_an-->en.yaml  test.yaml
src/data/: assert_no_data_overlap.py  clean_data.py  clean_data.sh  download_data.py  download_data.sh  make_training_data.py  make_training_data.sh  romanizer_analysis.py  romanizer_analysis.sh  sbatch_example.sh
src/data_TEST/: es_an.cognates.txt.cognate_list  es_an.cognates.txt.fwd  es_an.cognates.txt.rev  es_an.cognates.txt.src_sents  es_an.cognates.txt.sym  es_an.cognates.txt.tgt_sents  es_an.cognates.txt.word_pairs
src/utilities/: experiment_file_system.py  hpc.py  metrics.py  model_names.py  read_data.py  train_utilities.py  utilities.py
(+51 files in other folders)
