[project]
name = "charlotte2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camel-tools>=1.5.2",
    "eflomal>=2.0.0",
    "es-core-news-sm",
    "levenshtein>=0.27.3",
    "lightning>=2.6.1",
    "nltk>=3.9.3",
    "sacrebleu>=2.6.0",
    "sloth-hatch>=0.2.3",
    "spacy>=3.8.11",
    "submitit>=1.5.4",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "xx-sent-ud-sm",
]

[tool.uv.sources]
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
xx-sent-ud-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_sent_ud_sm-3.8.0/xx_sent_ud_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/NMT", "src/OC", "src/Pipeline"]
